--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Scroll</title>
+	<title>Lindiwe.design</title>
+
+	<meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+	
+	
+	
 </head>
 <body>
+ 
+	<nav> 
+		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+		<div class="hamburger-menu">
+		<div class="bar"></div>
+		<div class="bar"></div>
+		<div class="bar"></div>
+		</div>
+		<ul class="links">
 
-<h1>HI</h1>
+		
+		<li><a href="Blog.html">Blog</a></li>
+		<li><a href="About.html">About</a></li>
+		
+	</ul>
+	</nav>
+	
+
+	
+	<div class="card-container">
+	
+	<div class="card-left-One">
+
+	
+	<a href="CreativeOne.html" class="creative-title">Car Crash
+	</a>
+	
+	</div>
 
 
+	<div class="card-right-One">
+	
+		
+	<a href="CreativeThree.html" class="creative-title">Illusion</a>
+	
+	</div>
+
+	</div>
+
+
+	<div class="card-container">
+	
+	<div class="card-left-Two">
+	
+	<a href="CreativeTwo.html" class="creative-title">Find</a>
+	
+	
+	</div>
+	<div class="card-right-Two">
+		
+	<a href="CreativeFour.html" class="creative-title">Typography</a>
+	
+	</div>
+
+	</div>
+	
+
+
+
+
+	
+	
+<script src ="JS/nav.js"></script>
+<script src ="JS/myScript.js" type="text/javascript"></script>
 </body>
 </html>
+
+https://lindiwembuyisa.github.io/WSOA4175A_1592802/
+
+
