--- a/Four.html
+++ b/Four.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BlogPost_4</title>
+	<title>BlogPost_3</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
@@ -11,7 +11,7 @@
 <body>
 
 	
-     <nav> 
+      <nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
 		<div class="bar"></div>
@@ -19,20 +19,26 @@
 		<div class="bar"></div>
 		</div>
 		<ul class="links">
+
 		
-		<li class="current-link"><a href="Blog.html">Blog</a></li>
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
+		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
-	
+		
 	</ul>
 	</nav>
 
-	<button onclick="Back()">Back</button>
+	
 	
 
 	<article>
-		<h1 class="title">Behind the idea of the Website</h1>
-		<p class="subtitle"></p>
-		<p class="date"> 15 August 2020</p>
+		<h1 class="title">Behind the Design</h1>
+		<div class="image-mock"></div>
+
+
+		<p class="date">15 August 2020</p>
+		<p class="author">By Lindiwe Mbuyisa</p>
 	
 		<p class="paragraph"> The main design goal for this website was to use it as a porfolio which could including my design centric projects that would showcase my game design projects and motion graphics-playing around with typography. I wanted to include UX projects however I wanted to ensure that the user is not confused about the different projects and question what I do hence I just wanted to show only game design projects.  With this website, I wanted to create a portfolio website that will be a holder of my projects, my blogs posts that engage with the weekly readings. I have opted to use this website to display what I have done,  design projects that I have done individually during my degree but also beyond my degree. These projects will document the process of the project from start to finish. By creating this website as a design portfolio, I am not only looking at just using it to showcase my design projecs that I have done throughout my degree however I also intend on using it demonstrate my website design skills with the website itself further my web development skills. 
  		</p>
@@ -47,7 +53,7 @@
 		</article>
 		<article>
 
-	<h2>Wireframes & User journey</h2>
+	<h2 class="quote">Wireframes & User journey</h2>
 	<img src="Images/Wireframes.png" class="zoom">
 	<p class="caption">Image of the original wireframes</p>
 
@@ -61,7 +67,7 @@
 	<p class="caption">Image of the Mobile wireframe and user journey</p>
 
 
-	<h2>Look and Feel</h2>
+	<h2 class="quote">Look and Feel</h2>
 
 	<img src="Images/Colours.png">
 
@@ -69,7 +75,7 @@
 
 	
 
-	<h2>Inspiration and References</h2>
+	<h2 class="quote">Inspiration and References</h2>
 
 	<a href = "https://markus.se" class="link">Markus.se</a>	
 	<a href =" https://blackmeal.com" class="link">blackmeal.com</a>
@@ -79,8 +85,7 @@
  
 </article>
 
-		<a href="Two.html" class="prevbtn btn">Prev</a>
-		<a href="Five.html" class="nextbtn btn">Next</a>
+		
 
 
 <script src ="JS/nav.js" type="text/javascript"></script>
