--- a/One.html
+++ b/One.html
@@ -11,8 +11,7 @@
 </head>
 <body>
 
-	
-    <nav> 
+ <nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
 		<div class="bar"></div>
@@ -20,63 +19,74 @@
 		<div class="bar"></div>
 		</div>
 		<ul class="links">
+
 		
-		<li class="current-link"><a href="Blog.html">Blog</a></li>
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
+		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
 		
 	</ul>
 	</nav>
-
 	
-	<button onclick="Back()">Back</button>
+	<!--<button onclick="Back()">Back</button>-->
 	
 	
 
 	<article>
-		<h1 class="title">"Representation as a form of myth, visual communication and persuasion"</h1>
+		<h1 class="title">Representation as a form of myth, visual communication and persuasion</h1>
 	
-		
+		<div class="image-mock"></div>
+
+
 		<p class="date">22 July 2020</p>
-	
-		<p class="paragraph"> Representations are socially constructed. They are made-up within the frame of a particular understanding of the world. This means that things do not actually mean something rather we construct, make up the meaning using representational systems.   Based on Saussure's  theory of semiotics, he identfies that a sign is a symbol, colour. A sign is made up of two elements a signifier and signified.He suggests that a sign is made up of a signifier and signified-the form and the idea. These depend on context; conventions of social and cultural cues in order to for people to understand and interpret. The signifier stands in for the objects, like a picture of a person is a signifier as it stands in for the person who is not physically there. The signified refers to the idea that is being evoked or communicated.   Kidd (2015: 23) points out that an object can be interpreted at the denotative and connotative level which refers to the relationship of what is seen versus what is not seen at the level of the myth. For example, the Apple logo(sign), the denotation is an apple and the connotative level connotes an expensive and desirable object. A text or image which is a sign cannot just be read at its denotative level. It has meaning at the level of connotation and these connotations are meanings and interpretations that are informed by the media, our different experiences and knowledge- essentially our ideologies. These connotations eventually create myths. A myth refers to a widely accepted meaning which results in them being normalised. 
+		<p class="author">By Lindiwe Mbuyisa</p>
+			
+		<p class="paragraph">Representations are socially constructed. They are made-up within the frame of a particular understanding of the world. This means that things do not actually have meaning rather we construct, make up the meaning using representational systems.</p>
 
-		This is similar to Hall's theory of representation which suggests that the the media uses stereotypes. Stereotypes refers to the oversimplification of a particular group of people. For example, Men are often portrayed as strong characters versus women who are represented as caring, you would find women in adverts that show cleaning products.  Hall's theory of representation suggest that these stereotypes are often defined by those in power. These people are the white, heterosexual male. </p>
-	
-		<p class= "paragraph">We can see that with Orientalism which is the process by which the western media create representations of the Middle East and Asia that is biased and misrepresentation of these groups (Kidd 2015: 24-25). This representation is from the perspective of the media that is of <em>“non-native onlooker”</em> (Kidd 2015: 25).  For example, games often present the player with stereotypical Arabic characters. They often represented as a terrorist in the game. They are also usually dark-skinned and would be shouting Allahu-Akabr further carrying a gun most of the time an AK-47. </p>
-		
-		<img src="https://i.pinimg.com/originals/7e/3b/83/7e3b83e676593b7f4587339890c04ea0.jpg">
+		<p class="paragraph">Based on Saussure's theory of semiotics, he identfies that a sign is a symbol. A sign is made up of two elements a signifier and signified. He suggests that a sign is made up of a signifier and signified-the form and the idea. These depend on context; conventions of social and cultural cues in order to for people to understand and interpret. The signifier stands in for the objects, like a picture of a person is a signifier as it stands in for the person who is not physically there. The signified refers to the idea that is being evoked or communicated. Kidd (2015: 23) points out that an object can be interpreted at the denotative and connotative level which refers to the relationship of what is seen versus what is not seen at the level of the myth. For example, the Apple logo(sign), the denotation is an apple and the connotative level connotes an expensive and desirable object. A text or image which is a sign cannot just be read at its denotative level. It has meaning at the level of connotation and these connotations are meanings and interpretations that are informed by the media, our different experiences and knowledge- essentially our ideologies. These connotations eventually create myths. A myth refers to a widely accepted meaning which results in them being normalised. </p>
 
-		<p class="caption">Image example of Arab character in a game</p>
+		<p class="paragraph">This is similar to Hall's theory of representation which suggests that the the media uses stereotypes. Stereotypes refers to the oversimplification of a particular group of people. For example, Men are often portrayed as strong characters versus women who are represented as caring, you would find women in adverts that show cleaning products.  Hall's theory of representation suggest that these stereotypes are often defined by those in power. These people are the white, heterosexual male.</p>
 	
+		<p class= "paragraph">We can see that with Orientalism which is the process by which the western media create representations of the Middle East and Asia that is biased and misrepresentation of these groups (Kidd 2015: 24-25). This representation is from the perspective of the media that is of <em>“non-native onlooker” </em> (Kidd 2015: 25).  For example, games often present the player with stereotypical Arabic characters. They often represented as a terrorist in the game. They are also usually dark-skinned and would be shouting Allahu-Akabr further carrying a gun most of the time an AK-47. </p>
 
 		<p class="paragraph"> Similar to the media and how it represents people of colour particularly black people in comparison to other races. As an example, Daily Mail's representation of two footballers. The black individual is critised for spending too much money on a house versus the white footballer who is praised by the newspaper. This does not mean these representations cannot be rejected by the audience. However, the media intend on normalising these representations. </p>
 
-	
-			<img src="https://pbs.twimg.com/media/EbK1JFKXsAI95mN.jpg">
-			<p class="caption">Image of the Daily Mail Newspaper</p>
-			<p class="paragraph">
-	
-			<p class="paragraph">While there are other representations and visual communication like visual literacy and visual communication like images, they are open to different interpretations as compared to other mediums of communication. In terms of the connotative functions of images; they depend on the context in which the image is used. The reading and meaning of an image are informed by their mode of presentation, production context-where the image has been produced, the historical context, the context of the image to other images and the reception and reading of the image. 
-			</p>
-			
-
-			<h2>Now we find representation in the form of data visualisation.</h2>
+		<div class="row">
+		<div class="column">
+		<img src="Images/Represent.png"><p class="caption">Image example of Arab character in a game</p></div>
+		<div class="column">
+		<img src="Images/Racism.jpg">
+		<p class="caption">Image of the Daily Mail Newspaper</p></div>
 		
-			<p class="paragraph">Data visualisation has become interactive as well. This data is presented in ways that the audience can grasp or understand difficult concepts or identify new patterns. Similar to image representations, data visualisations are constructed. Kidd (2015: 31) defines data visualisation as speculative and further suggest that an infographic cannot tell the entire story. This is similar to media text as the individual in charge of collecting the data, analysing it is also another way of representing certain issues, ideas in a particular. Similar to media texts, data visualisation is about the construction which refers to the individual deciding on the angle, layout or what choices they make in trying to represent the information. Data visualisation also includes a selection process whereby the individual whereby they select particular facts, data points overs others but also, we have to consider what is not included as part of this data. This data visualisation or representation can also be influenced by the ideologies, what the person compiling this data hold which particular beliefs and values. This ultimately dictates what we see as the audience and readers/viewers of the data or images or media texts.
-			This means that representation of texts, images or data are constructed. Kidd(2015:29) suggest that they do not reflect the reality however have the ability to shape it </p>
+	</div>
+		
 
-         	<h2>References</h2>
-			<h3> Kidd, J. 2015. Theories of Representation. <cite>Representation.</cite> Routledge. pp 23-35.</h3>
-			<h3>Photo image by Mansour, Leila.<a href="https://i.pinimg.com/originals/7e/3b/83/7e3b83e676593b7f4587339890c04ea0.jpg">Arab Characters in games</a></h3>
+		
+		
+		<p class="paragraph">While there are other representations and visual communication like visual literacy and visual communication like images, they are open to different interpretations as compared to other mediums of communication. In terms of the connotative functions of images; they depend on the context in which the image is used. The reading and meaning of an image are informed by their mode of presentation, production context-where the image has been produced, the historical context, the context of the image to other images and the reception and reading of the image. 
+		</p>
 			
-			<h3>Photo image on right by Phillip Oldham and Phot image on left by Getty images.<a href="https://pbs.twimg.com/media/EbK1JFKXsAI95mN.jpg">Race Representation in the Media</a></h3>
+
+		<h2 class="quote">Now we find representation in the form of data visualisation.</h2>
+		
+		<p class="paragraph">Data visualisation has become interactive as well. This data is presented in ways that the audience can grasp or understand difficult concepts or identify new patterns. Similar to image representations, data visualisations are constructed. Kidd (2015: 31) defines data visualisation as speculative and further suggest that an infographic cannot tell the entire story. This is similar to media text as the individual in charge of collecting the data, analysing it is also another way of representing certain issues, ideas in a particular. Similar to media texts, data visualisation is about the construction which refers to the individual deciding on the angle, layout or what choices they make in trying to represent the information. Data visualisation also includes a selection process whereby the individual whereby they select particular facts, data points overs others but also, we have to consider what is not included as part of this data. This data visualisation or representation can also be influenced by the ideologies, what the person compiling this data hold which particular beliefs and values. This ultimately dictates what we see as the audience and readers/viewers of the data or images or media texts.
+		This means that representation of texts, images or data are constructed. Kidd(2015:29) suggest that they do not reflect the reality however have the ability to shape it </p>
+
+         <h2 class="reference-title">References</h2>
+		<h3 class="reference-list"> Kidd, J. 2015. Theories of Representation. <cite>Representation.</cite> Routledge. pp 23-35.</h3>
+		<h3 class="reference-list">Photo image by Mansour, Leila.<a href="https://i.pinimg.com/originals/7e/3b/83/7e3b83e676593b7f4587339890c04ea0.jpg">Arab Characters in games</a></h3>
+		<h3 class="reference-list">Photo image on right by Phillip Oldham and Phot image on left by Getty images.<a href="https://pbs.twimg.com/media/EbK1JFKXsAI95mN.jpg">Race Representation in the Media</a></h3>
 
 	</article>
 	
 
-	<a href="Two.html" class="nextbtn btn">Next</a>
+	<!--<a href="Two.html" class="nextbtn btn">Next</a>-->
 
-		
+
+
+
+
 	<script src ="JS/nav.js" type="text/javascript"></script>
 	
 
