--- a/About.html
+++ b/About.html
@@ -6,13 +6,16 @@
 
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+	 <link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<script src ="JS/myScript.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	
 </head>
+
 <body>
-	<nav> 
+	
+	
+<nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
 		<div class="bar"></div>
@@ -20,49 +23,56 @@
 		<div class="bar"></div>
 		</div>
 		<ul class="links">
+
 		
-	
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
-		<li class="current-link"><a href="About.html">About</a></li>
-	
+		<li><a href="About.html">About</a></li>
+		
 	</ul>
 	</nav>
 
-	<div class="about-section"">
-	<div class="column-container-about">
-		<div class="column-left">
-		<img class= "img-about"src="Images/giphy.gif">
+	<div>
+		<h1 class="header">WHO AM I ?</h1>
 	</div>
-	<div class="column-right">
-		<h1 class="name-heading">Heita, I'm Lindiwe.</h1>
-		<p class="paragraph"> I am student currently studying BA Digital Arts with an interest in game design and user experience design. As you browse the creative section, you will notice that most of my work is games-puzzle games to be specific but also includes other projects which are motion graphics and playing around with typography. My journey as a creative began as hobby but has become more than just that. It has become a form of expression. I like to explore different genres and mostly create 2D games. In terms of the inspiration for my projects, they are often inspired by other games, my own experiences and politics.</p>
+	<div>
+		<h2 class="interactive-title">INTERACTIVE</h2>
+		<h2 class="designer-title">DESIGNER</h2>
+	</div>
+	<section>
+		<p class="paragraph">I define myself as an interactive designer because most of my work is interactive -games, websites and other unique experiences that focus on everyday life which most of the time is influenced by my politics and societal issues. You can also find me doing custom typography that I am always apprehensive/nervous to share. Hence this website is a dedication to my typography work. 
+
+</p>
+
+
+	</section>
+	<div>
+		<h2 class="typography-title">TYPOGRAPHY</h2>
+		<h2 class="enthusiast-title">ENTHUSIAST</h2>
 	</div>
 
-</div>
+	<section>
+		<p class="paragraph">Apart from all of that you can find me reading fiction books to escape my daily life, lately i have been into more sci-fi books. You would also find me on my computer developing my coding skills, trying new things like painting or skateboarding.
 
-	<h2 class="title-about">Let's Collab</h2>
-	<div id="contact">
-		
-		<a class="link" href="https://twitter.com/home" target="_blank">Twitter
-			<div class="icon">
-				<img src="https://cdn2.iconfinder.com/data/icons/metro-uinvert-dock/256/Twitter_NEW.png">
-			</div>
-		</a>
-
-		<a class="link" href="https://lindiwe.itch.io/" target="_blank">Itch.io
-		<div class="icon">
-				<img src="https://img.icons8.com/windows/452/itch-io.png">
-			</div>
-		</a>
-		<a class="link"href="https://mail.google.com/mail/u/0/?tab=rm#inbox" target="_blank">Email
-
-			<div class="icon">
-				<img src="https://www.google.com/gmail/about/static/images/logo-gmail.png?cache=1adba63">
-			</div>
-		</a>
+		</p>
+	</section>
+	<div>
+		<h1 class="contact-section">LeT'S COLLaB</h1>
 	</div>
-</div>
 
+	<div class="box">
+	<div><h6 class="social-twitter"><a href="/">Twitter</a></h6></div>
+	<div><h6 class="social-behance"><a href="/">Behance</a></h6> </div>
+	<div><h6 class="social-email"><a href="/">Email</a></h6></div>
+	</div>
+	
+
+<!--	<div class="box">
+		<div class="one">One</div>
+		<div class="two">Two</div>
+		<div class="three">Three</div>
+	</div>-->
 <script src ="JS/nav.js" type="text/javascript"></script>
 </body>
 </html>
