--- a/Five.html
+++ b/Five.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BlogPost_5</title>
+	<title>BlogPost_4</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
@@ -11,7 +11,7 @@
 <body>
 
 	
-   <nav> 
+    <nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
 		<div class="bar"></div>
@@ -19,38 +19,43 @@
 		<div class="bar"></div>
 		</div>
 		<ul class="links">
+
 		
-		<li class="current-link"><a href="Blog.html">Blog</a></li>
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
+		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
-	
+		
 	</ul>
 	</nav>
 
-	<button onclick="Back()">Back</button>
+	
 	
 
 	<article>
-		<h1 class="title">"The World Wide Web"</h1>
-		<p class="subtitle"></p>
+		<h1 class="title">The World Wide Web</h1>
+		<div class="image-mock"></div>
+
+
 		<p class="date">15 August 2020</p>
+		<p class="author">By Lindiwe Mbuyisa</p>
+
 		<p class="paragraph">  
- 		 The web has become more than a framework encompassing/including human knowledge as a hypertext system. It has further become more than a pool of human knowledge as Bernes Lee points out (Bernes-Lee 1994: 791). It has made available or accessible a world wide web that has the most information than ever before, more than we have ever seen in comparison to a physical space like a library. (Bernes-Lee 1994:791). The worldwide web has inevitably grown to become a place where individuals share information more than just that people can host their business websites but also conduct financial transactions and shop online. This article as the originally published proposal suggested the foundation for the web as we have come to witness that the invention of the web has had an influential part in our lives. During the writing of the proposal what Bernes-Lee had envisioned with the web was a different number of things. The web defined as the idea of a boundless information world of which all the items or information had a reference which could be retrieved. It represented the address system (URL) which refers to the universal resource identifier, the network protocol which is used by the servers which were able to give the web servers performance and features. Further, the web had represented a mark-up language which every web server is required to understand and interpret (Bernes-Lee 1994:793).  </p>
+ 		 The web has become more than a framework encompassing/including human knowledge as a hypertext system. It has further become more than a pool of human knowledge as Bernes Lee points out (Bernes-Lee 1994: 791). It has made available or accessible a world wide web that has the most information than ever before, more than we have ever seen in comparison to a physical space like a library (Bernes-Lee 1994:791). </p>
+ 		<p class="paragraph">The worldwide web has inevitably grown to become a place where individuals share information more than just that people can host their business websites but also conduct financial transactions and shop online. This article as the originally published proposal suggested the foundation for the web as we have come to witness that the invention of the web has had an influential part in our lives. During the writing of the proposal what Bernes-Lee had envisioned with the web was a different number of things. The web defined as the idea of a boundless information world of which all the items or information had a reference which could be retrieved. It represented the address system (URL) which refers to the universal resource identifier, the network protocol which is used by the servers which were able to give the web servers performance and features. Further, the web had represented a mark-up language which every web server is required to understand and interpret (Bernes-Lee 1994:793).  </p>
  		 
-		<p class="paragraph"> In terms of the future of the web, Bernes-Lee had proposed that with the web being a place of communication and collaboration, learning and new market place, he envisioned that the web in the future would include a few things like the implementation of a name service that would allow for documents to be referenced by name, independent of their location and hypertext editors would also be able to create hyperlinks to organise information. Further, he envisioned that the web would have a easy to use server for low-end machines to ease the publication of information. Based on the proposal and the growth that we have seen in terms of the web in the 21st century.  Hanson(2019) points out the evolving and changing worldwide web brought people together what Bernes-Lee original proposal proposed was providing information and a system for individuals to share information remotely. The internet has evolved to allow companies and individuals to create websites, publish thoughts, opinions, the sharing of information and images. According to internet live stats, they have recorded that as of 2019 a billion websites have been created. The web is now used for personal purposes, business purposes but we have also seen how the information age has turned into surveillance capitalism. Surveillance capitalism refers to the new economy in which companies like Google, Facebook  collect and sell user information to third parties to get prediction results on user behaviour but also intend on changing it (Zuboff 2019: 14-15). This information is valued in today's society. However, despite the surveillance capitalism that we see online or of the use of the web, the web has allowed for the creation of applications like Twitter which have allowed for marginalized groups to voice their opinions like Arab Spring, Black Lives Matter and as of recently the Nigerian movement, #ENDSARS.  </p>
-		</article>
+		<p class="paragraph"> In terms of the future of the web, Bernes-Lee had proposed that with the web being a place of communication and collaboration, learning and new market place, he envisioned that the web in the future would include a few things like the implementation of a name service that would allow for documents to be referenced by name, independent of their location and hypertext editors would also be able to create hyperlinks to organise information. Further, he envisioned that the web would have a easy to use server for low-end machines to ease the publication of information.</p>
+
+	<p class="paragraph"> Based on the proposal and the growth that we have seen in terms of the web in the 21st century.  Hanson(2019) points out the evolving and changing worldwide web brought people together what Bernes-Lee original proposal proposed was providing information and a system for individuals to share information remotely. The internet has evolved to allow companies and individuals to create websites, publish thoughts, opinions, the sharing of information and images. According to internet live stats, they have recorded that as of 2019 a billion websites have been created. The web is now used for personal purposes, business purposes but we have also seen how the information age has turned into surveillance capitalism. Surveillance capitalism refers to the new economy in which companies like Google, Facebook  collect and sell user information to third parties to get prediction results on user behaviour but also intend on changing it (Zuboff 2019: 14-15). This information is valued in today's society. However, despite the surveillance capitalism that we see online or of the use of the web, the web has allowed for the creation of applications like Twitter which have allowed for marginalized groups to voice their opinions like Arab Spring, Black Lives Matter and as of recently the Nigerian movement, #ENDSARS.  </p>
 		
-
-
-			<article>
-             <h2> References</h2>
-			<h3>Bernes-Lee. T. 1994. The World Wide Web. <cite>Communications of the ACM, 37(8):</cite> 907-912</h3>
-			<h3>Hanson, M. 2019. The world wide web at 30: how the portal changed our world. Retrieved August 15, 2020 from the World Wide Web:<cite><a href="https://www.techradar.com/news/the-internet-at-30-how-the-web-changed-our-world ">The World Wide Web at 30:</a></cite></h3>
-			<h3>Zuboff, S. 2019. The Age of Surveillance Capitalism: The Fight for a Human Future at the New Frontier of Power. New York: Public Affairs.</h3>
-			<h3>The Institute of Art and Ideas. (2019). Shoshana Zuboff, The Age of Surveillance Capitalism. Available from: <a href="https://www.youtube.com/watch?v=8HzW5rzPUy8">The Age of Surveillance Capitalism </h3>
+             <h2 class="reference-title"> References</h2>
+			<h3 class="reference-list">Bernes-Lee. T. 1994. The World Wide Web. <cite>Communications of the ACM, 37(8):</cite> 907-912</h3>
+			<h3 class="reference-list">Hanson, M. 2019. The world wide web at 30: how the portal changed our world. Retrieved August 15, 2020 from the World Wide Web:<cite><a href="https://www.techradar.com/news/the-internet-at-30-how-the-web-changed-our-world ">The World Wide Web at 30:</a></cite></h3>
+			<h3 class="reference-list">Zuboff, S. 2019. The Age of Surveillance Capitalism: The Fight for a Human Future at the New Frontier of Power. New York: Public Affairs.</h3>
+			<h3 class="reference-list">The Institute of Art and Ideas. (2019). Shoshana Zuboff, The Age of Surveillance Capitalism. Available from: <a href="https://www.youtube.com/watch?v=8HzW5rzPUy8">The Age of Surveillance Capitalism</a> </h3>
 	</article>
 
-		<a href="Four.html" class="prevbtn btn" style="float: left;">Prev</a>
-		<a href="Six.html" class="nextbtn btn">Next</a>
+		
 
 
 <script src ="JS/nav.js" type="text/javascript"></script>
