--- a/Six.html
+++ b/Six.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BlogPost_6</title>
+	<title>BlogPost_5</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
@@ -11,7 +11,7 @@
 <body>
 
 	
-<nav> 
+ <nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
 		<div class="bar"></div>
@@ -19,33 +19,42 @@
 		<div class="bar"></div>
 		</div>
 		<ul class="links">
+
 		
-		<li class="current-link"><a href="Blog.html">Blog</a></li>
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
+		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
-	
+		
 	</ul>
 	</nav>
 	
-	<button onclick="Back()">Back</button>
+	
 	
 
 	<article>
-		<h1 class="title">"A research center for augmenting human intellect"</h1>
+		<h1 class="title">A research center for augmenting human intellect</h1>
 		
+		<div class="image-mock"></div>
+
+
 		<p class="date">15 August 2020</p>
-		<p class="paragraph">Engelbert and English are two researchers who set out to develop an experimental laboratory around an interactive multi-console display system and aimed to learn the principles by which interactive computer system can aid and augment their human intellectual capability. Their research and demo envisioned that the computer would a tool for collaboration and the augmentation of our collective to work on human’s most important problem.  Their demo was the first public presentation of the computer, mouse and basic fundamentals of modern computing. The demo included many concepts and tools for modern computing networked computing. This featured what we know as a mouse, word processing, document editing, viewing and organising information and demonstrating the concept of hyperlinking. In detail this included a time-sharing computer with a 4.5 megabyte, 96megabyte file storage disk. The display being high-resolution commercial television monitor and providing character vector portrayals. This featured typewriter keyboard with an SRI cursor device which allowed for screen pointing and selection. This was held by the user, XY transducer which placed on a surface preferably a flat surface. This was how the idea of the mouse came about. As they were trying to test and come up with the ideas and different kinds of display and selection devices. They further developed a concept whereby the user files would be organised in a form of hierarchical structures of data entities compromising of text and figures. This allowed the user to have a composed study and change these files with flexibility/quickly. All these concepts, the demo have become the foundation of what we know as the computer furthermore the internet. These ideas have been extended and have become more advanced in the 21st century. 
+		<p class="author">By Lindiwe Mbuyisa</p>
+
+		<p class="paragraph">Engelbert and English are two researchers who set out to develop an experimental laboratory around an interactive multi-console display system and aimed to learn the principles by which interactive computer system can aid and augment their human intellectual capability. </p>
+		<p class="paragraph">Their research and demo envisioned that the computer would be a tool for collaboration and the augmentation of our collective to work on human’s most important problem.  Their demo was the first public presentation of the computer, mouse and basic fundamentals of modern computing. The demo included many concepts and tools for modern computing networked computing. This featured what we know as a mouse, word processing, document editing, viewing and organising information and demonstrating the concept of hyperlinking. In detail this included a time-sharing computer with a 4.5 megabyte, 96megabyte file storage disk. The display being high-resolution commercial television monitor and providing character vector portrayals. This featured typewriter keyboard with an SRI cursor device which allowed for screen pointing and selection. This was held by the user, XY transducer which placed on a surface preferably a flat surface. This was how the idea of the mouse came about. As they were trying to test and come up with the ideas and different kinds of display and selection devices. They further developed a concept whereby the user files would be organised in a form of hierarchical structures of data entities compromising of text and figures. This allowed the user to have a composed study and change these files with flexibility/quickly. All these concepts, the demo have become the foundation of what we know as the computer furthermore the internet. These ideas have been extended and have become more advanced in the 21st century. 
 		   </p>
 		<p class="paragraph"> The research has inspired and influenced the idea of computing software/hardware. What this means is that English and Engelbert's proposal was to create a computer of the future. They proposed that computers of the future should be created and perform for the needs of the human/user. They further proposed that the computer should have a keyboard, screens as opposed to printouts. They point out that the computer should be augmenting rather than replace the human intellect. The research aimed at augmenting a system development project but also the primary research aimed at creating principles/rules of analysis and design to understand how to augment human capability. This research is not only for specific disciplines, but they hoped that this system can help others come up with augmentation systems to help other disciplines plus activities. What this research does is that it set out to reach the point where users can do work online, all of our activities via the consoles/computer. The result of this we can see in the 21st century and this is similar to how the Tim Berners-Lee's visionary has evolved, this applies to Engelbert and English's proposal of the augmenting of the human intellect. The concept of the computer has evolved and has become more of an extension of the self.  These features and tools have been extended. For example, google docs and github are perfect examples of collaboration tools. 
 	</p>
 
-</article>
 
-<article>
-	<h2>References</h2>
- 	<h3>Engelbert, C & English, W,C. 1968.<cite>A research center for augmenting human intellect conference proceedings of the 1968 Fall joint computer Conference. Vol.33,</cite> pp 395-410 </h3></article>
+
+
+	<h2 class="reference-title">References</h2>
+ 	<h3 class="reference-list">Engelbert, C & English, W,C. 1968.<cite>A research center for augmenting human intellect conference proceedings of the 1968 Fall joint computer Conference. Vol.33,</cite> pp 395-410 </h3>
+ 	</article>
            
- 	<a href="Five.html" class="prevbtn btn">Prev</a>
-	<a href="Seven.html" class="nextbtn btn">Next</a>
+ 	
 
 <script src ="JS/nav.js" type="text/javascript"></script>
 </body>
