--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Lindiwe.design</title>
+	<title>Weirdo98</title>
 
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,13 +16,15 @@
 	<nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
+		<!--<div class="bar"></div>-->
 		</div>
-		<ul class="links">
+		<ul class="links" id="links">
 
 		
+		<li><a href="Contact.html">Contact</a></li>
+		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="About.html">About</a></li>
 		
@@ -30,55 +32,51 @@
 	</nav>
 	
 
-	
-	<div class="card-container">
-	
-	<div class="card-left-One">
 
-	
-	<a href="CreativeOne.html" class="creative-title">Car Crash
-	</a>
-	
+
+	<div>
+		<h1 class="heading-one">HEITA, I AM</h1>
 	</div>
-
-
-	<div class="card-right-One">
 	
-		
-	<a href="CreativeThree.html" class="creative-title">Illusion</a>
 	
+	<div>
+		<h1 class="heading-two">LINDIWE</h1>
 	</div>
+	<div>
+		<h2 class="heading-three">INTERACTIVE</h2>
+	</div>
+	
+	<div class="column-container-home">
+	<div class="column-left">
+	<h2 class="and-sign">&</h2></div>
+	<div class="column-right"><h2 class="heading-four">DESIGNER</h2>
+	<p class="paragraph-home">typography enthusiast apart from that, I am a sneaker fanatic. More about me<a href="About.html" class="here-title">here</a></p>
 
 	</div>
-
-
-	<div class="card-container">
-	
-	<div class="card-left-Two">
-	
-	<a href="CreativeTwo.html" class="creative-title">Find</a>
-	
-	
-	</div>
-	<div class="card-right-Two">
-		
-	<a href="CreativeFour.html" class="creative-title">Typography</a>
-	
-	</div>
-
 	</div>
 	
 
-
-
+<h3 class="project-title">SELECTED PROJECTS</h3>
+	<section></section>
 
 	
+	<div style="background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04)">
+		<h1 class="contact-section">LeT'S COLLaB</h1>
+
+	<div class="box">		
+	<div><h6 class="social-twitter"><a href="/">Twitter</a></h6></div>
+	<div><h6 class="social-behance"><a href="/">Behance</a></h6> </div>
+	<div><h6 class="social-email"><a href="/">Email</a></h6></div>
+	</div>
+	</div>
 	
-<script src ="JS/nav.js"></script>
+	
+	
+<script src ="JS/nav.js" type="text/javascript"></script>
 <script src ="JS/myScript.js" type="text/javascript"></script>
 </body>
 </html>
 
-https://lindiwembuyisa.github.io/WSOA4175A_1592802/
+
 
 
