--- a/Blog.html
+++ b/Blog.html
@@ -12,11 +12,10 @@
 
 	
     <nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoWhite.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
@@ -40,121 +39,11 @@
 		<div class="line"></div>
 		<div class="column-container">
 		<h3 class="number">01</h3>
-		<a href="One.html"><h2 class="blog-title">Representation as a form of myth</h2></a>
-		</div>
-		</section>
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">02</h2>
-		<a href="Two.html"><h2 class="blog-title">The History of Data Visualisation</h2></a>
-		</div>
-		
-		</section>
-
-		
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">03</h2>
-		<a href="Four.html"><h2 class="blog-title">Behind the Design</h2></a>
-		</div>
-		</section>
-
-
-		<section>	
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">04</h2>
-		<a href="Five.html"><h2 class="blog-title">The World Wide Web</h2></a>
-		</div>
-		
-		</section>
-
-		
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">05</h2>
-		<a href="Six.html"><h2 class="blog-title">A Research Center for Augmenting Human Intellect</h2></a>
-		</div>
-		
-		</section>
-
-
-	
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">06</h2>
-		<a href="Seven.html"><h2 class="blog-title">What is Hypertext?</h2></a>
-		</div>
-		
-		</section>
-
-
-	
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container">
-		<h2 class="number">07</h2>
-		<a href="Eight.html"><h2 class="blog-title">Hyperlink as an organising principle</h2></a>
-		</div>
-		
-		</section>
-
-		
-	
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container" style="background-color: #000000">
-		<h2 class="number">08</h2>
-		<a href="Nine.html"><h2 class="blog-title">Interpreting the layout of webpages</h2></a>
-		</div>
-		
-		</section>
-
-		
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container" style="background-color: #000000">
-		<h2 class="number">09</h2>
-		<a href="Ten.html"><h2 class="blog-title">A look at information geographies</h2></a>
+		<a href="One.html"><h2 class="blog-title">Behind The Design</h2></a>
 		</div>
 		</section>
 
 		
-		<section>
-		<div class="line"></div>
-		<div class="column-container" style="background-color: #000000">
-		<h2 class="number">10</h2>
-		<a href="Eleven.html"><h2 class="blog-title">The analysis of 4IR in South Africa</h2></a>
-		</div>
-		</section>
-
-		
-		
-
-		<section>
-		<div class="line"></div>
-		<div class="column-container" style="background-color: #000000">
-		<h2 class="number">11</h2>
-		<a href="Twelve.html"><h2 class="blog-title">Machine Learning and Artificial Intelligence</h2></a>
-		</div>
-		
-		</section>
-
-	
-		
-
-
 	   
 		
 
