--- a/CreativeEight.html
+++ b/CreativeEight.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Music Motion Typography</title>
+	<title>Interactive Art + Code Project </title>
 
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +18,8 @@
 	<nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
@@ -33,17 +32,28 @@
 	</ul>
 	</nav>
 
-<section class="canvas">
-	
-<div><h1 class="creative-title">36 DAYS OF -</h1></div>
-<div><h1 class="creative-type">TYPE</h1></div>
+	<section class="canvas">
+
+		<div>
+			<h1 class="creative-title">36 DAYS OF -</h1>
+		</div>
+		<div>
+			<h1 class="creative-type">TYPE</h1>
+		</div>
 
 
-<div>
-	<p></p>
-</div>
-</section>
-	
+		<div>
+			<p class="paragraph-creative"> This project was my interpretation of the 36 days of type that is popular
+				amongst designers and probably every creative on the internet who are exploring the creative bondaries
+				of letterforms and where they are challenged to create a letter and number each day for 36 consecutive
+				days. I wanted to use my code abilitie to create these letterforms.  </p>
+		</div>
+
+		<h3 class="third-title">Tools used for this project include: </h3>
+		<h6 class="tools">
+		<li>Javascript and the web </li>
+		</h6>
+	</section>
 
 		
 <script src ="JS/nav.js"></script>
