--- a/CreativeOne.html
+++ b/CreativeOne.html
@@ -2,54 +2,87 @@
 <html>
 
 <head>
-	<title>36 Days of Type</title>
+	<title>Personal Brand</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<script src ="JS/myScript.js" type="text/javascript"></script>
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<script src="JS/myScript.js" type="text/javascript"></script>
+
+
 
 
 </head>
+
 <body>
- 
-	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+
+	<nav style="background-color: black;">
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+			<div class="bar1" style="background-color: white;"></div>
+			<div class="bar2" style="background-color: white;"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
-<section class="canvas">
-	
-<div><h1 class="creative-title">36 DAYS OF -</h1></div>
-<div><h1 class="creative-type">TYPE</h1></div>
+	<section class="canvas">
+
+		<div>
+			<h1 class="creative-title">PERSONAL</h1>
+			<h1 class="creative-type">BRANDING </h1>
+		</div>
+
+		<div>
+			<!--Image Here-->
+		</div>
 
 
-<div>
-	<p class="paragraph-creative"> This project is about blah blah </p>
-</div>
-</section>
-	
+		<div>
+			<p class="creative-paragraph">Personal Branding looked like it was an easy task to do at first glance until
+				had to literally do it. Branding myself was probably the toughest thing to do mainly
+				because of not knowing where to start and which direction to take. But also because I kept on
+				procrastinating and the criticism. But it did make me learn and love working with illustrator. </p>
 
+
+		</div>
+
+		<h2 class="second-title">THE BREAKDOWN</h2>
+		<h3 class="third-title">Tools used for this project include: </h3>
+		<h6 class="tools">
+			<li>Adobe Illustrator</li>
+			<li>Adobe Photoshop</li>
+			<li>Adobe After Effects & Media Encoder.</li>
+		</h6>
+
+		<h6 class="reference">Other Resources</h6>
+		<p class="reference-paragraph"> Most of the mockups used are from Pixel surplus and some are from random
+			internet sites.</p>
+
+
+	<div><a href="CreativeNine.html" class="btn-prev">Project 9</a></div>
 		
-<script src ="JS/nav.js"></script>
+
+	<div><a href="CreativeTwo.html" class="btn-next">Project 2</a></div>
+		
+
+
+	</section>
+
+
+
+
+
+
+
+	<script src="JS/nav.js"></script>
 </body>
+
 </html>
-
-
-
-
