--- a/CreativeThree.html
+++ b/CreativeThree.html
@@ -2,52 +2,63 @@
 <html>
 
 <head>
-	<title>My Personal Brand</title>
+	<title>36 Days of Type</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-	<script src ="JS/myScript.js" type="text/javascript"></script>
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+	<script src="JS/myScript.js" type="text/javascript"></script>
+
+
 
 
 </head>
+
 <body>
- 
-	 <nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+
+	<nav>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoBlack.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
 	<section class="canvas">
-	
-<div><h1 class="creative-title">36 DAYS OF -</h1></div>
-<div><h1 class="creative-type">TYPE</h1></div>
+
+		<div>
+			<h1 class="creative-title">36 DAYS OF -</h1>
+		</div>
+		<div>
+			<h1 class="creative-type">TYPE</h1>
+		</div>
 
 
-<div>
-	<p class="paragraph-creative"> This project is about blah blah </p>
-</div>
-</section>
-	
+		<div>
+			<p class="paragraph-creative"> This project was my interpretation of the 36 days of type that is popular
+				amongst designers and probably every creative on the internet who are exploring the creative bondaries
+				of letterforms and where they are challenged to create a letter and number each day for 36 consecutive
+				days. I wanted to use my code abilitie to create these letterforms.  </p>
+		</div>
 
-		
-<script src ="JS/nav.js"></script>
+		<h3 class="third-title">Tools used for this project include: </h3>
+		<h6 class="tools">
+		<li>Javascript and the web </li>
+		</h6>
+	</section>
+
+
+
+	<script src="JS/nav.js"></script>
 </body>
+
 </html>
-
-
