--- a/CreativeTwo.html
+++ b/CreativeTwo.html
@@ -2,53 +2,74 @@
 <html>
 
 <head>
-	<title>Typography Exploration</title>
+	<title>Youth Day Project</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-	<script src ="JS/myScript.js" type="text/javascript"></script>
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<script src="JS/myScript.js" type="text/javascript"></script>
+
+
 
 
 </head>
+
 <body>
- 
-	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+
+	<nav>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
-	
+
 	<section class="canvas">
-	
-<div><h1 class="creative-title">YOUTH DAY</h1></div>
-<div><h1 class="creative-type">MOTION TYPOGRAPHY</h1></div>
+
+		<div>
+			<h1 class="creative-title">YOUTH DAY</h1>
+		</div>
+		<!--<div>
+			<h1 class="creative-type">DAY</h1>
+		</div>-->
 
 
-<div>
-	<p class="paragraph-creative"> This project is about blah blah </p>
-</div>
-</section>
-	
+		<div>
+			<p class="creative-paragraph">June 16 also known as Youth Day is a commemoration of the uprising that began in Soweto and spread across South Africa which profoundly
+				changed the socio-political landscape in South Africa. The events were triggered by the policies of the
+				apartheid government that resulted in the introduction of the Bantu Education Act in 1953. The rise of
+				the black consciousness movement and the formation of the South African students organisation raised the
+				political consciousness of many students. While others joined the wave of the anti-apartheid sentiment
+				within the student community when the language of Afrikaans and English were made compulsory as a medium
+				of instruction in schools in 1974 and this led to black students mobilizing against such policies and
+				rules of which resulted in the death of innocent young black students at the hands of police officers. This project did push me out of my comfrot zone as I am still learning After Effects.
+			</p>
 
-			
-<script src ="JS/nav.js"></script>
+		</div>
+		<h3 class="third-title">Tools used for this project include: </h3>
+		<h6 class="tools">
+		<li> Adobe Media Encoder</li>
+		
+		<li>Adobe After Effects</li>	 
+		</h6>
+		
+		<h6 class="reference">Other Resources</h6>
+		<a href="" class="reference-link">SA-history</a>
+	</section>
+
+
+
+	<script src="JS/nav.js"></script>
 </body>
+
 </html>
-
-
