--- a/One.html
+++ b/One.html
@@ -14,9 +14,8 @@
  <nav> 
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
@@ -34,15 +33,15 @@
 	
 
 	<article>
-		<h1 class="title">Representation as a form of myth, visual communication and persuasion</h1>
+		<h1 class="title">Behind The Design</h1>
 	
 		<div class="image-mock"></div>
 
 
-		<p class="date">22 July 2020</p>
+		<p class="date">05 July 2021</p>
 		<p class="author">By Lindiwe Mbuyisa</p>
 			
-		<p class="paragraph">Representations are socially constructed. They are made-up within the frame of a particular understanding of the world. This means that things do not actually have meaning rather we construct, make up the meaning using representational systems.</p>
+		<p class="paragraph">Redesigning or first-time designing a website is a difficult task and tideous task.</p>
 
 		<p class="paragraph">Based on Saussure's theory of semiotics, he identfies that a sign is a symbol. A sign is made up of two elements a signifier and signified. He suggests that a sign is made up of a signifier and signified-the form and the idea. These depend on context; conventions of social and cultural cues in order to for people to understand and interpret. The signifier stands in for the objects, like a picture of a person is a signifier as it stands in for the person who is not physically there. The signified refers to the idea that is being evoked or communicated. Kidd (2015: 23) points out that an object can be interpreted at the denotative and connotative level which refers to the relationship of what is seen versus what is not seen at the level of the myth. For example, the Apple logo(sign), the denotation is an apple and the connotative level connotes an expensive and desirable object. A text or image which is a sign cannot just be read at its denotative level. It has meaning at the level of connotation and these connotations are meanings and interpretations that are informed by the media, our different experiences and knowledge- essentially our ideologies. These connotations eventually create myths. A myth refers to a widely accepted meaning which results in them being normalised. </p>
 
