--- a/index.html
+++ b/index.html
@@ -5,78 +5,116 @@
 	<title>Weirdo98</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-	
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+
+
+
 </head>
+
 <body>
- 
-	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+
+	<nav>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoNeon.png" class="logo-img"></a>
+		</div>
 		<div class="hamburger-menu">
-		<div class="bar1"></div>
-		<div class="bar2"></div>
-		<!--<div class="bar"></div>-->
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links" id="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
+
 	</nav>
-	
+
 
 
 
 	<div>
 		<h1 class="heading-one">HEITA, I AM</h1>
 	</div>
-	
-	
+
+
 	<div>
 		<h1 class="heading-two">LINDIWE</h1>
 	</div>
 	<div>
 		<h2 class="heading-three">INTERACTIVE</h2>
 	</div>
-	
+
 	<div class="column-container-home">
-	<div class="column-left">
-	<h2 class="and-sign">&</h2></div>
-	<div class="column-right"><h2 class="heading-four">DESIGNER</h2>
-	<p class="paragraph-home">typography enthusiast apart from that, I am a sneaker fanatic. More about me<a href="About.html" class="here-title">here</a></p>
+		<div class="column-left">
+			<h2 class="and-sign">&</h2>
+		</div>
+		<div class="column-right">
+			<h2 class="heading-four">DESIGNER</h2>
+			<p class="paragraph-home">typography enthusiast apart from that, I am a sneaker fanatic. More about me<a
+				 href="About.html" class="here-title">here.</a></p>
+
+		</div>
+	</div>
+<div><h3 class="project-title">SELECTED PROJECTS</h3></div>	
+
+
+
+	<div id="grid-container">
+		
+		<div class="grid-item a">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectOne.jpg);"><a href="CreativeOne.html"></a></div>
+		</div>
+		<div class="grid-item b">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectTwo.jpg);"><a href="CreativeTwo.html"></a></div>
+		</div>
+		<div class="grid-item c">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectThree.jpg);"><a href="CreativeThree.html"></a></div>
+		</div>
+		<div class="grid-item d">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectFour.jpg);"><a href="CreativeFour.html"></a></div>
+		</div>
+		<div class="grid-item e">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectFive.jpg);"><a href="CreativeFive.html"></a></div>
+		</div>
+		<div class="grid-item f">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectSix.jpg);"><a href="CreativeSix.html"></a></div>
+		</div>
+		<div class="grid-item g">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectSeven.jpg);"><a href="CreativeSeven.html"></a></div>
+		</div>
+		<div class="grid-item h">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectEight.jpg);"><a href="CreativeEight.html"></a></div>
+		</div>
+		<div class="grid-item i">
+		<div class="grid-item-img" style="background-image: url(Images/ProjectNine.jpg);"><a href="CreativeNine.html"></a></div>
+		</div>
 
 	</div>
-	</div>
-	
 
-<h3 class="project-title">SELECTED PROJECTS</h3>
-	<section></section>
-
-	
 	<div style="background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04)">
 		<h1 class="contact-section">LeT'S COLLaB</h1>
 
-	<div class="box">		
-	<div><h6 class="social-twitter"><a href="/">Twitter</a></h6></div>
-	<div><h6 class="social-behance"><a href="/">Behance</a></h6> </div>
-	<div><h6 class="social-email"><a href="/">Email</a></h6></div>
+		<div class="box">
+			<div>
+				<h6 class="social-twitter"><a href="/">Twitter</a></h6>
+			</div>
+			<div>
+				<h6 class="social-behance"><a href="/">Behance</a></h6>
+			</div>
+			<div>
+				<h6 class="social-email"><a href="/">Email</a></h6>
+			</div>
+		</div>
 	</div>
-	</div>
-	
-	
-	
-<script src ="JS/nav.js" type="text/javascript"></script>
-<script src ="JS/myScript.js" type="text/javascript"></script>
+
+
+
+	<script src="JS/nav.js" type="text/javascript"></script>
+	<script src="JS/myScript.js" type="text/javascript"></script>
 </body>
+
 </html>
-
-
-
-
