--- a/About.html
+++ b/About.html
@@ -16,11 +16,10 @@
 	
 	
 <nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+	<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoBlack.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
@@ -28,7 +27,7 @@
 		<li><a href="Contact.html">Contact</a></li>
 		<li><a href="Projects.html">Projects</a></li>
 		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
+		<li class="current-link"><a href="About.html">About</a></li>
 		
 	</ul>
 	</nav>
@@ -41,9 +40,9 @@
 		<h2 class="designer-title">DESIGNER</h2>
 	</div>
 	<section>
-		<p class="paragraph">I define myself as an interactive designer because most of my work is interactive -games, websites and other unique experiences that focus on everyday life which most of the time is influenced by my politics and societal issues. You can also find me doing custom typography that I am always apprehensive/nervous to share. Hence this website is a dedication to my typography work. 
+		<p class="paragraph"> Lindiwe Mbuyisa is a Joburg based interactive designer with creative and technical skills specialising in interactivity, creative development and motion typography. I define myself as an interactive designer because most of my work is interactive -games, websites and other unique experiences that focus on everyday life which most of the time is influenced by my politics and societal issues. You can also find me doing motion typography that I am always apprehensive/nervous to share. Hence this website is a dedication to my typography work. 
 
-</p>
+	</p>
 
 
 	</section>
@@ -53,26 +52,25 @@
 	</div>
 
 	<section>
-		<p class="paragraph">Apart from all of that you can find me reading fiction books to escape my daily life, lately i have been into more sci-fi books. You would also find me on my computer developing my coding skills, trying new things like painting or skateboarding.
-
-		</p>
+		<p class="paragraph">Apart from all of that you can find me reading fiction books to escape my daily life, lately I have been into more sci-fi and fantasy genre. You would also find me on my computer developing my coding skills, trying new things like painting or skateboarding. Yoh I have been also watching a couple tv shows, Close Enough on Netflix is really good.</p>
 	</section>
+
+
 	<div>
 		<h1 class="contact-section">LeT'S COLLaB</h1>
-	</div>
+
 
 	<div class="box">
 	<div><h6 class="social-twitter"><a href="/">Twitter</a></h6></div>
 	<div><h6 class="social-behance"><a href="/">Behance</a></h6> </div>
 	<div><h6 class="social-email"><a href="/">Email</a></h6></div>
 	</div>
+</div>
+
+
+
 	
 
-<!--	<div class="box">
-		<div class="one">One</div>
-		<div class="two">Two</div>
-		<div class="three">Three</div>
-	</div>-->
 <script src ="JS/nav.js" type="text/javascript"></script>
 </body>
 </html>
