--- a/Contact.html
+++ b/Contact.html
@@ -5,121 +5,99 @@
 	<title>Weirdo98</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/style.css">
-	
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+
+
+
 </head>
+
 <body>
- 
-	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+
+	<nav>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoBlack.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
-	
-  <!--<div>
-  	<h1 class="heading">Let's</h1>
-  	<div><p class="email">Hit me up! if you prefer email,</p>
-  		<p class="email-link">it's<a href="/"> leembuyisa22@gmail.com</a></p>
-  	</div>
-  </div>-->
-	
-		
-		<div class="column-container-contact">
-			<div class="column-left">
-				<h1 class="lets-title">LeT'S</h1>
-			</div>
-			<div class="column-right">
-				<p class="email">Hit me up! if you prefer email</p>
-				<p class="email-link">it's<a href="/"> leembuyisa22@gmail.com</a></p>
-			</div>
+
+
+
+	<div class="column-container-contact">
+		<div class="column-left">
+			<h1 class="lets-title">LeT'S</h1>
 		</div>
-	
+		<div class="column-right">
+			<p class="email">Hit me up! if you prefer email</p>
+			<p class="email-link">it's<a href="/">leembuyisa22@gmail.com</a></p>
+		</div>
+	</div>
 
 
-		<div class="column-container-contact">
+
+	<div>
 		<h1 class="collab-title">COLLaB</h1>
+	</div>
+
+
+
+
+	<div class="column-container-contact-form">
+		<div class="left">
+			<p class="social-subtitle">If you want to catch my future live projects or converse. Hit me up via the
+				social media links below!</p>
+
+			<div class="social-links">
+				<div>
+					<h2 class="twitter-link"><a href="/">Twitter</a></h2>
+				</div>
+				<div>
+					<h2 class="behance-link"><a href="/">Behance</a></h2>
+				</div>
+			</div>
+
 		</div>
+		<div class="right">
+			<div class="contact-form-wrapper">
+				<input type="text" placeholder="Name" class="n input">
+				<input type="text" placeholder="Surname" class="s input">
+				<input type="text" placeholder="Email Address" class="e input">
+				<input type="text" placeholder="Subject" class="sb input">
+				<input type="text" placeholder="Company" class="c input">
+				<input type="text" placeholder="Message" class="m input">
 
-
-
-
-		<div class="column-container-contact">
-			<div class="subtitle">
-			<p class="social-subtitle">if you want to catch my live projects or converse</p>
-
-		</div>
-		</div>
-
-		<div class="social-links">
-			<div><h2 class="twitter-link"><a href="/">Twitter</a></h2></div>
-			<div><h2 class="behance-link"><a href="/">Behance</a></h2>
-			</div></div>
-			<div class="form">
-				
 			</div>
 			
+		</div>
+		
+	</div>
+	
+	<div id = "btn-wrapper">
+		<button onclick="Submit()" class="submit-btn">Submit</button>
+	</div>j
 
-			<section class="form">
-				<div class="form-container">
-					<form action="">
-						<div class="form-list">
-							<label for="Name">Name</label>
-							<input type="text" id="Name" name="Name">	
-						</div>
-
-						<div class="form-list">
-							<label for="Surname">Surname</label>
-							<input type="text" id="Surname" name="Surname">
-						</div>
-						<div class="form-list">
-							<label for="location">Location</label>
-							<input type="text" id="location" name="location">
-						</div>
-						<div class="form-list">
-							<label for="subject">Subject</label>
-							<input type="text" id="subject" name="subject">
-						</div>
-
-						<div class="form-list">
-							<label for="Email">Email address</label>
-							<input type="text" id="Email" name="Email">
-						</div>
-
-						<div class="form-list">
-							<label for="Company">Company</label>
-							<input type="text" id="Company" name="Company">
-						</div>
-
-						<button type="submit">Submit</button>
-
-					</form>
-				</div>
-			</section>
+<!--<button onclick="Back()">Back</button>-->
 
 
 
 
-<script src ="JS/nav.js"></script>
-<script src ="JS/myScript.js" type="text/javascript"></script>
+
+
+
+
+	<script src="JS/nav.js"></script>
+	<script src="JS/myScript.js" type="text/javascript"></script>
 
 </body>
+
 </html>
-
-
-
-
