--- a/CreativeNine.html
+++ b/CreativeNine.html
@@ -2,54 +2,59 @@
 <html>
 
 <head>
-	<title>90s Inspired Typography Exploration</title>
+	<title>Illustrations</title>
 
 	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<script src ="JS/myScript.js" type="text/javascript"></script>
-	
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<script src="JS/myScript.js" type="text/javascript"></script>
+
+
 
 
 </head>
+
 <body>
- 
-	<nav> 
+
+	<nav>
 		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+			<div class="bar1"></div>
+			<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
-		
-		<li><a href="Contact.html">Contact</a></li>
-		<li><a href="Projects.html">Projects</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="About.html">About</a></li>
-		
-	</ul>
+
+			<li><a href="Contact.html">Contact</a></li>
+			<li><a href="Projects.html">Projects</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="About.html">About</a></li>
+
+		</ul>
 	</nav>
 
-<section class="canvas">
-	
-<div><h1 class="creative-title">36 DAYS OF -</h1></div>
-<div><h1 class="creative-type">TYPE</h1></div>
+	<section class="canvas">
+
+		<div>
+			<h1 class="creative-title">ILLUSTRATIONS</h1>
+		</div>
 
 
-<div>
-	<p></p>
-</div>
-</section>
-	
 
-		
-<script src ="JS/nav.js"></script>
+		<div>
+			<p class="paragraph-creative">The aim of the website was to show a body of work/projects I enoy doing and
+				creating. This project is an example of a project that decided to include because I wanted to show my
+				love for illustratiing. While this is not part of the work I normally do I wanted to show versatility and highlight the different skills I have. </p>
+		</div>
+
+		<h3 class="third-title">Tools used for this project include: </h3>
+		<h6 class="tools">
+			<li>Adobe Illustrator</li>
+		</h6>
+	</section>
+
+
+	<script src="JS/nav.js"></script>
 </body>
+
 </html>
-
-
-
-
