--- a/Projects.html
+++ b/Projects.html
@@ -14,11 +14,10 @@
 <body>
  
 	<nav> 
-		<div class="logo" style="float: left;"><a href="index.html">Lindiwe:)</a></div>
+		<div class="logo" style="float: left;"><a href="index.html"><img src="Images/LogoBlack.png" class="logo-img"></a></div>
 		<div class="hamburger-menu">
-		<div class="bar"></div>
-		<div class="bar"></div>
-		<div class="bar"></div>
+		<div class="bar1"></div>
+		<div class="bar2"></div>
 		</div>
 		<ul class="links">
 
@@ -37,7 +36,9 @@
 	</div>
 
 
-''
+<div>
+	<h2 class="projects-title">Selected Projects</h2>
+</div>
 
 	
 	
